--- a/.env
+++ b/.env
@@ -1,11 +1,13 @@
 APP_ENV=development
 
 APP_PORT=8000
-DB_HOST=localhost
+
+
+DB_HOST=node68806-api-go-nexd.th1.proen.cloud
 DB_PORT=5432
-DB_USER=myuser
-DB_PASS=mypassword
-DB_NAME=my_gorm
+DB_USER=postgres
+DB_PASS=KSQhbm15373
+DB_NAME=mydatabase
 DB_SSLMODE=disable
 DB_TIMEZONE=Asia/Bangkok
 
