--- a/.env
+++ b/.env
@@ -2,12 +2,12 @@ APP_ENV=development
 
 APP_PORT=8000
 
-
 DB_HOST=node68806-api-go-nexd.th1.proen.cloud
 DB_PORT=5432
-DB_USER=postgres
+DB_USER=webadmin
 DB_PASS=KSQhbm15373
 DB_NAME=mydatabase
+
 DB_SSLMODE=disable
 DB_TIMEZONE=Asia/Bangkok
 
